fixing metcalf logo on mobile. google analytics code. removed noindex tag. updated meta descriptions

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,7 +10,7 @@
   }
 
   & .footer-sponsor-logo {
-    width: 200px;
+    max-width: 200px;
     filter: brightness(0) invert(1);
     margin-left: 8px;
   }
